--- a/categoria.html
+++ b/categoria.html
@@ -58,6 +58,13 @@
       <div class="modal__title" id="modalTitle">Producto</div>
       <div class="modal__price" id="modalPrice">$0</div>
       <div class="modal__desc" id="modalDesc">Descripción...</div>
+
+      <div class="modal__qty">
+        <button class="qtybtn" id="modalQtyDec" type="button" aria-label="Restar">−</button>
+          <strong id="modalQtyVal">1</strong>
+        <button class="qtybtn" id="modalQtyInc" type="button" aria-label="Sumar">+</button>
+    </div>
+
       <button class="btn btn--primary" id="modalAddBtn">Agregar al carrito</button>
 
       <div class="modal__extra" id="modalExtra"></div>
