--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </button>
 
       <a class="brand brand--center" href="#top" aria-label="Inicio">
-        <img class="brand__img" src="img/logo.png" alt="Konchi" />
+        <img class="brand__img" src="img/logotest.png" alt="Konchi" />
       </a>
 
       <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
