--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </button>
 
       <a class="brand brand--center" href="#top" aria-label="Inicio">
-        <img class="brand__img" src="img/logotest.png" alt="Konchi" />
+        <img class="brand__img" src="img/aasss.jpeg" alt="Konchi" />
       </a>
 
       <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
@@ -34,22 +34,6 @@
     </nav>
   </div>
 </header>
-
-  <div class="banner">
-  <button class="banner__arrow banner__arrow--left" aria-label="Anterior">‹</button>
-
-  <div class="banner__track" id="bannerTrack">
-    <div class="banner__slide is-active">Banner 1</div>
-  </div>
-
-  <button class="banner__arrow banner__arrow--right" aria-label="Siguiente">›</button>
-
-  <div class="banner__dots" id="bannerDots">
-    <span class="dot is-active"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    </div>
-  </div>
 
   <div class="search search--big">
     <input id="searchInput" type="search" placeholder="¿Qué estás buscando?" />
