--- a/checkout.html
+++ b/checkout.html
@@ -14,7 +14,7 @@
       <button class="icon-btn icon-btn--square" onclick="window.location.href='index.html'" aria-label="Volver">←</button>
 
       <a class="brand brand--center" href="index.html" aria-label="Inicio">
-        <img class="brand__img" src="img/aasss.jpeg" alt="Konchi" />
+        <img class="brand__img" src="img/logo.png" alt="Konchi" />
       </a>
     </div>
   </div>
