--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </button>
 
       <a class="brand brand--center" href="#top" aria-label="Inicio">
-        <img class="brand__img" src="img/aasss.jpeg" alt="Konchi" />
+        <img class="brand__img" src="img/logo.png" alt="Konchi" />
       </a>
 
       <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
@@ -26,18 +26,105 @@
     </div>
 
     <!-- Drawer nav -->
-    <nav class="drawer" id="drawer" aria-hidden="true">
-      <a href="#top" class="drawer__link">Inicio</a>
-      <a href="#catalogo" class="drawer__link">Productos</a>
-      <a href="#info" class="drawer__link">Quiénes somos</a>
-      <a href="#contacto" class="drawer__link">Contacto</a>
-    </nav>
+<nav class="drawer" id="drawer" aria-hidden="true">
+
+  <div class="drawer__header">
+    <span class="drawer__title">Menú</span>
+    <button class="drawer__close" id="drawerClose" type="button" aria-label="Cerrar menú">✕</button>
+  </div>
+
+  <div class="drawer__divider"></div>
+
+  <div class="drawer__section">
+  <div class="drawer__sectionTitle">— Navegación —</div>
+
+  <a class="drawer__link" href="#inicio">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- Home -->
+      <svg viewBox="0 0 24 24">
+        <path d="M12 3 3 10v11h6v-7h6v7h6V10l-9-7z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Inicio</span>
+  </a>
+
+  <a class="drawer__link" href="#catalogo">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- Grid / Productos -->
+      <svg viewBox="0 0 24 24">
+        <path d="M4 4h7v7H4V4zm9 0h7v7h-7V4zM4 13h7v7H4v-7zm9 0h7v7h-7v-7z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Productos</span>
+  </a>
+
+  <a class="drawer__link" href="#mas-vendidos">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- Star -->
+      <svg viewBox="0 0 24 24">
+        <path d="M12 2l3.1 6.3 6.9 1-5 4.9 1.2 6.8L12 18.8 5.8 22l1.2-6.8-5-4.9 6.9-1L12 2z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Más vendidos</span>
+  </a>
+</div>
+
+<div class="drawer__section">
+  <div class="drawer__sectionTitle">— Información —</div>
+
+  <button class="drawer__link" type="button" data-panel="about">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- User -->
+      <svg viewBox="0 0 24 24">
+        <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5zm0 2c-5 0-9 2.5-9 5.5V22h18v-2.5C21 16.5 17 14 12 14z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Quiénes somos</span>
+  </button>
+
+  <button class="drawer__link" type="button" data-panel="kimchis">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- Info -->
+      <svg viewBox="0 0 24 24">
+        <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm1 15h-2V11h2v6zm0-8h-2V7h2v2z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Sobre nuestros Kimchis</span>
+  </button>
+
+  <button class="drawer__link" type="button" data-panel="faq">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- Help -->
+      <svg viewBox="0 0 24 24">
+        <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 17a1.25 1.25 0 1 1 1.25-1.25A1.25 1.25 0 0 1 12 19zm2-7.2c-.9.7-1.2 1.1-1.2 2V14h-2v-.4c0-1.5.6-2.3 1.7-3.1.9-.7 1.3-1.1 1.3-1.8a1.6 1.6 0 0 0-3.2 0H8.6a3.6 3.6 0 0 1 7.2 0c0 1.7-.9 2.5-1.8 3.1z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Preguntas frecuentes</span>
+  </button>
+</div>
+
+<div class="drawer__section">
+  <div class="drawer__sectionTitle">— Contacto —</div>
+
+  <button class="drawer__link" type="button" data-panel="contact">
+    <span class="drawer__icon" aria-hidden="true">
+      <!-- Phone -->
+      <svg viewBox="0 0 24 24">
+        <path d="M6.6 10.8c1.6 3 4 5.4 7 7l2.3-2.3c.3-.3.8-.4 1.2-.2 1 .4 2.2.7 3.4.7.6 0 1 .4 1 1V21c0 .6-.4 1-1 1C10.3 22 2 13.7 2 3c0-.6.4-1 1-1h3.3c.6 0 1 .4 1 1 0 1.2.2 2.4.7 3.4.1.4 0 .9-.2 1.2L6.6 10.8z"></path>
+      </svg>
+    </span>
+    <span class="drawer__text">Contactos</span>
+  </button>
+</div>
+
+
+</nav>
+    <div class="drawer-overlay" id="drawerOverlay" hidden></div>
   </div>
 </header>
 
   <div class="search search--big">
     <input id="searchInput" type="search" placeholder="¿Qué estás buscando?" />
-    <span class="search__icon">🔍</span>
   </div>
 
   <section class="section" id="catalogo">
@@ -63,7 +150,11 @@
 
   <div class="about__card">
     <p class="about__text">
-      Somos nosotros.........
+      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
     </p>
   </div>
 </section>
@@ -133,7 +224,7 @@
       </svg>
     </a>
 
-    <a class="social__btn" href="#" target="_blank" rel="noopener" aria-label="Instagram">
+    <a class="social__btn" href="https://www.instagram.com/konchi.kimchi/" target="_blank" rel="noopener" aria-label="Instagram">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3z"/>
         <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"/>
@@ -151,7 +242,7 @@
 </div>
 
     <div class="footer__copy">
-        Copyright © <span id="copyYear"></span> Konchi kimchi. Todos los derechos reservados.
+        Copyright © <span id="copyYear"></span> Konchi Kimchi. Todos los derechos reservados.
       </div>
     </div>
 </footer>
@@ -186,6 +277,20 @@
       </div>
     </div>
   </div>
+
+
+  <!-- Panel lateral genérico -->
+<aside class="side-panel" id="sidePanel" aria-hidden="true">
+  <div class="side-panel__overlay" data-panel-close></div>
+
+  <div class="side-panel__card">
+    <header class="side-panel__header">
+    </header>
+
+    <div class="side-panel__body" id="sidePanelBody"></div>
+  </div>
+</aside>
+
 
   <script src="productos.js"></script>
   <script src="app.js"></script>
