--- a/index.html
+++ b/index.html
@@ -123,6 +123,29 @@
   </div>
 </header>
 
+  <section class="banner">
+  <div class="banner__track" id="bannerTrack">
+
+    <div class="banner__slide is-active"
+         style="--banner-img:url('img/banner/banner5.png')">
+    </div>
+
+    <div class="banner__slide"1
+         style="--banner-img:url('img/banner/banner4.png')">
+    </div>
+
+  </div>
+
+  <button class="banner__arrow banner__arrow--left" aria-label="Anterior">‹</button>
+  <button class="banner__arrow banner__arrow--right" aria-label="Siguiente">›</button>
+
+  <div class="banner__dots">
+    <span class="dot is-active"></span>
+    <span class="dot"></span>
+  </div>
+</section>
+
+
   <div class="search search--big">
     <input id="searchInput" type="search" placeholder="¿Qué estás buscando?" />
   </div>
