--- a/categoria.html
+++ b/categoria.html
@@ -14,11 +14,15 @@
       <button class="icon-btn icon-btn--square" onclick="window.location.href='index.html'" aria-label="Volver">←</button>
 
       <a class="brand brand--center" href="index.html" aria-label="Inicio">
-        <img class="brand__img" src="img/logo.png" alt="Konchi" />
+        <img class="brand__img" src="img/logotransparente.png" alt="Konchi" />
       </a>
 
       <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
-        <span class="cart-ico" aria-hidden="true">🛒</span>
+        <span class="cart-ico" aria-hidden="true">
+  <?xml version="1.0" encoding="utf-8"?>
+
+<svg width="800px" height="800px" viewBox="0 0 1024 1024" fill="#000000" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M800.8 952c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56z m-448 0c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56zM344 792c-42.4 0-79.2-33.6-84-76l-54.4-382.4-31.2-178.4c-2.4-19.2-19.2-35.2-37.6-35.2H96c-13.6 0-24-10.4-24-24s10.4-24 24-24h40.8c42.4 0 80 33.6 85.6 76l31.2 178.4 54.4 383.2C309.6 728 326.4 744 344 744h520c13.6 0 24 10.4 24 24s-10.4 24-24 24H344z m40-128c-12.8 0-23.2-9.6-24-22.4-0.8-6.4 1.6-12.8 5.6-17.6s10.4-8 16-8l434.4-32c19.2 0 36-15.2 38.4-33.6l50.4-288c1.6-13.6-2.4-28-10.4-36.8-5.6-6.4-12.8-9.6-21.6-9.6H320c-13.6 0-24-10.4-24-24s10.4-24 24-24h554.4c22.4 0 42.4 9.6 57.6 25.6 16.8 19.2 24.8 47.2 21.6 75.2l-50.4 288c-4.8 41.6-42.4 74.4-84 74.4l-432 32c-1.6 0.8-2.4 0.8-3.2 0.8z" fill="" /></svg>
+</span>
         <span class="cart-badge" id="cartCount">0</span>
       </button>
     </div>
@@ -32,7 +36,6 @@
   </div>
 </section>
 
-<!-- Modal carrito (copiá el mismo bloque de tu index.html para que funcione igual) -->
 <div class="modal" id="cartModal" aria-hidden="true">
   <div class="modal__overlay" data-close="1"></div>
   <div class="modal__card modal__card--cart" role="dialog" aria-modal="true" aria-label="Carrito">
@@ -48,7 +51,6 @@
   </div>
 </div>
 
-<!-- Modal producto (si querés seguir usando el modal por ahora) -->
 <div class="modal" id="productModal" aria-hidden="true">
   <div class="modal__overlay" data-close="1"></div>
   <div class="modal__card" role="dialog" aria-modal="true" aria-label="Detalle de producto">
