--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
       </button>
 
       <a class="brand brand--center" href="#top" aria-label="Inicio">
-        <img class="brand__img" src="img/logo.png" alt="Konchi" />
+        <img class="brand__img" src="img/logotransparente.png" alt="Konchi" />
       </a>
 
       <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
-        <span class="cart-ico" aria-hidden="true">🛒</span>
+        <span class="cart-ico" aria-hidden="true">
+  <?xml version="1.0" encoding="utf-8"?>
+<svg width="800px" height="800px" viewBox="0 0 1024 1024" fill="#000000" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M800.8 952c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56z m-448 0c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56zM344 792c-42.4 0-79.2-33.6-84-76l-54.4-382.4-31.2-178.4c-2.4-19.2-19.2-35.2-37.6-35.2H96c-13.6 0-24-10.4-24-24s10.4-24 24-24h40.8c42.4 0 80 33.6 85.6 76l31.2 178.4 54.4 383.2C309.6 728 326.4 744 344 744h520c13.6 0 24 10.4 24 24s-10.4 24-24 24H344z m40-128c-12.8 0-23.2-9.6-24-22.4-0.8-6.4 1.6-12.8 5.6-17.6s10.4-8 16-8l434.4-32c19.2 0 36-15.2 38.4-33.6l50.4-288c1.6-13.6-2.4-28-10.4-36.8-5.6-6.4-12.8-9.6-21.6-9.6H320c-13.6 0-24-10.4-24-24s10.4-24 24-24h554.4c22.4 0 42.4 9.6 57.6 25.6 16.8 19.2 24.8 47.2 21.6 75.2l-50.4 288c-4.8 41.6-42.4 74.4-84 74.4l-432 32c-1.6 0.8-2.4 0.8-3.2 0.8z" fill="" /></svg>
+</span>
         <span class="cart-badge" id="cartCount">0</span>
       </button>
     </div>
 
-    <!-- Drawer nav -->
 <nav class="drawer" id="drawer" aria-hidden="true">
 
   <div class="drawer__header">
@@ -40,7 +42,6 @@
 
   <a class="drawer__link" href="#inicio">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- Home -->
       <svg viewBox="0 0 24 24">
         <path d="M12 3 3 10v11h6v-7h6v7h6V10l-9-7z"></path>
       </svg>
@@ -50,7 +51,6 @@
 
   <a class="drawer__link" href="#catalogo">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- Grid / Productos -->
       <svg viewBox="0 0 24 24">
         <path d="M4 4h7v7H4V4zm9 0h7v7h-7V4zM4 13h7v7H4v-7zm9 0h7v7h-7v-7z"></path>
       </svg>
@@ -60,7 +60,6 @@
 
   <a class="drawer__link" href="#mas-vendidos">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- Star -->
       <svg viewBox="0 0 24 24">
         <path d="M12 2l3.1 6.3 6.9 1-5 4.9 1.2 6.8L12 18.8 5.8 22l1.2-6.8-5-4.9 6.9-1L12 2z"></path>
       </svg>
@@ -74,17 +73,15 @@
 
   <button class="drawer__link" type="button" data-panel="about">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- User -->
       <svg viewBox="0 0 24 24">
         <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5zm0 2c-5 0-9 2.5-9 5.5V22h18v-2.5C21 16.5 17 14 12 14z"></path>
       </svg>
     </span>
-    <span class="drawer__text">Quiénes somos</span>
+    <span class="drawer__text">Nuestra Historia</span>
   </button>
 
   <button class="drawer__link" type="button" data-panel="kimchis">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- Info -->
       <svg viewBox="0 0 24 24">
         <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm1 15h-2V11h2v6zm0-8h-2V7h2v2z"></path>
       </svg>
@@ -94,7 +91,6 @@
 
   <button class="drawer__link" type="button" data-panel="faq">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- Help -->
       <svg viewBox="0 0 24 24">
         <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 17a1.25 1.25 0 1 1 1.25-1.25A1.25 1.25 0 0 1 12 19zm2-7.2c-.9.7-1.2 1.1-1.2 2V14h-2v-.4c0-1.5.6-2.3 1.7-3.1.9-.7 1.3-1.1 1.3-1.8a1.6 1.6 0 0 0-3.2 0H8.6a3.6 3.6 0 0 1 7.2 0c0 1.7-.9 2.5-1.8 3.1z"></path>
       </svg>
@@ -108,7 +104,6 @@
 
   <button class="drawer__link" type="button" data-panel="contact">
     <span class="drawer__icon" aria-hidden="true">
-      <!-- Phone -->
       <svg viewBox="0 0 24 24">
         <path d="M6.6 10.8c1.6 3 4 5.4 7 7l2.3-2.3c.3-.3.8-.4 1.2-.2 1 .4 2.2.7 3.4.7.6 0 1 .4 1 1V21c0 .6-.4 1-1 1C10.3 22 2 13.7 2 3c0-.6.4-1 1-1h3.3c.6 0 1 .4 1 1 0 1.2.2 2.4.7 3.4.1.4 0 .9-.2 1.2L6.6 10.8z"></path>
       </svg>
@@ -123,15 +118,19 @@
   </div>
 </header>
 
-  <section class="banner" id="inicio">
+<section class="banner" id="inicio">
   <div class="banner__track" id="bannerTrack">
 
     <div class="banner__slide is-active"
          style="--banner-img:url('img/banner/banner5.png')">
     </div>
 
-    <div class="banner__slide"1
+    <div class="banner__slide"
          style="--banner-img:url('img/banner/banner4.png')">
+    </div>
+
+    <div class="banner__slide"
+         style="--banner-img:url('img/banner/banner6.png')">
     </div>
 
   </div>
@@ -142,8 +141,10 @@
   <div class="banner__dots">
     <span class="dot is-active"></span>
     <span class="dot"></span>
+    <span class="dot"></span>
   </div>
 </section>
+
 
 
   <div class="search search--big">
@@ -177,7 +178,7 @@
     Nuestra cocina siempre fue un laboratorio de curiosidad, donde lo tradicional se mezcla
     con lo inesperado. Así conocimos el kimchi… y lo hicimos propio.
   </p>
-
+  <br>
   <p class="about__text">
     Hace 4 años nació <strong>KONCHI</strong>, un proyecto que fermenta ideas, ingredientes y
     principios. Desde el primer frasco, decidimos salirnos del molde y crear versiones únicas
@@ -206,20 +207,18 @@
 
 <footer class="footer" id="contacto">
   <div class="container">
-    <h3 class="footer__heading">Contactanos</h3>
 
     <div class="footer__grid">
 
       <div class="footer__box">
         <div class="footer__boxTitle">Categorías</div>
         <nav class="footer__nav">
-  <!-- Navegación (scroll) -->
+
   <a href="#inicio">Inicio</a>
   <a href="#catalogo">Productos</a>
   <a href="#mas-vendidos">Más vendidos</a>
 
-  <!-- Información (paneles) -->
-  <button type="button" class="footer__link" data-panel="about">Quiénes somos</button>
+  <button type="button" class="footer__link" data-panel="about">Nuestra Historia</button>
   <button type="button" class="footer__link" data-panel="kimchis">Sobre nuestros Kimchis</button>
   <button type="button" class="footer__link" data-panel="faq">Preguntas frecuentes</button>
   <button type="button" class="footer__link" data-panel="contact">Contactos</button>
@@ -305,8 +304,7 @@
         <div class="modal__title" id="modalTitle">Producto</div>
         <div class="modal__price" id="modalPrice">$0</div>
         <div class="modal__desc" id="modalDesc">Descripción...</div>
-        <button class="btn btn--primary" id="modalAddBtn">Agregar al carrito</button>
-
+        <button id="modalAddBtn" class="btn btn--primary btnModalAdd">AGREGAR AL 🛒</button>
         <div class="modal__extra" id="modalExtra"></div>
       </div>
     </div>
@@ -327,47 +325,231 @@
     </div>
   </div>
 
-
-  <!-- Panel lateral genérico -->
 <aside class="side-panel" id="sidePanel" aria-hidden="true">
   <div class="side-panel__overlay" data-panel-close></div>
 
   <div class="side-panel__card">
     <header class="side-panel__header">
-  <button class="side-panel__back" type="button" data-panel-close aria-label="Volver">‹</button>
+  <button class="side-panel__back" type="button" data-panel-back aria-label="Volver">‹</button>
   <div class="side-panel__title" id="sidePanelTitle">Panel</div>
   <button class="side-panel__close" type="button" data-panel-close aria-label="Cerrar">✕</button>
 </header>
 
 <div class="side-panel__body" id="sidePanelBody"></div>
 
-<!-- Contenido editable (lo cambiás acá, no en JS) -->
 <template id="tpl-about">
-  <h3>¿Quiénes somos?</h3>
-  <p>DDDSDSDSDSDSDSD</p>
+  <div class="panel-hero">
+    <p class="panel-card__title">Origen</p>
+    <p class="panel-hero__subtitle" style="margin-top:0">
+      Siempre nos encantó conocer sabores de todo el mundo y experimentar recrearlos.
+    </p>
+
+    <p class="panel-hero__subtitle">
+      Conocimos el kimchi y lo hicimos propio, lo transformamos en KONCHI. Empezamos a
+      salirnos del kimchi tradicional e innovar en los ingredientes. Hasta el momento
+      creamos 5 variedades de kimchi únicas.
+    </p>
+  </div>
+
+  <div class="panel-grid">
+    <div class="panel-card">
+      <p class="panel-card__title">Principios</p>
+      <p class="panel-card__text">
+        Queremos que la marca sea un reflejo de nuestros principios. Por eso, en KONCHI
+        vas a encontrar un producto vegano, sustentable, saludable y feminista.
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Tradición</p>
+      <p class="panel-card__text">
+        En Corea cada familia tiene su propia receta de kimchi que es pasada de generación
+        en generación. Son las abuelas y las madres coreanas las que se encargan de
+        preparar el kimchi para toda la familia. Usan el kimchi para nutrir, curar y
+        mimar a su familia.
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Homenaje</p>
+      <p class="panel-card__text">
+        Es esa energía de creatividad y alquimia femenina que quisimos honrar y
+        transmitir con cada bocado de KONCHI.
+      </p>
+    </div>
+  </div>
 </template>
 
+
 <template id="tpl-kimchis">
-  <h3>Sobre nuestros Kimchis</h3>
-  <p>DDDSDSDSDSDSDSD</p>
+  <div class="panel-hero">
+    <p class="panel-hero__title">¿Qué es el kimchi?</p>
+    <p class="panel-hero__subtitle">
+      El kimchi es un alimento fermentado que nació como un encurtido, con el fin de
+      conservar las verduras para el duro invierno de Corea.
+    </p>
+
+    <div class="chips">
+      <span class="chip">AAAAAAA</span>
+      <span class="chip">AAAAAAA</span>
+      <span class="chip">AAAAAAA</span>
+    </div>
+  </div>
+
+  <div class="panel-grid">
+    <div class="panel-card">
+      <p class="panel-card__title">Tradición</p>
+      <p class="panel-card__text">
+        En Corea existen más de 200 tipos de kimchi, todos con su particular sabor,
+        dependiendo de los ingredientes y las formas de prepararlo. No hay un
+        ingrediente fundamental y cada familia tiene su propia receta.
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Fermentación</p>
+      <p class="panel-card__text">
+        Se genera ácido láctico durante la fermentación, lo cual aporta acidez y le da
+        una textura crocante a los vegetales.
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Nuestro enfoque</p>
+      <p class="panel-card__text">
+        Nuestro kimchi es vegano. Aunque el kimchi tradicional suele contener
+        langostinos secos y/o salsa de pescado, nosotros elegimos reemplazar ese sabor
+        con algas y salsa de soja porque creemos en la alimentación consciente y
+        sustentable.
+      </p>
+    </div>
+  </div>
 </template>
 
 <template id="tpl-faq">
-  <h3>Preguntas frecuentes</h3>
-  <p>DDDSDSDSDSDSDSD</p>
+
+  <div class="faq">
+    <details open>
+      <summary>¿Cuáles son los beneficios del kimchi?</summary>
+      <div class="faq__body">
+        El kimchi contiene probióticos que benefician los sistemas inmunológicos y
+        digestivos. Además es una gran fuente de vitaminas A, B y C, antioxidantes, ha
+        demostrado reducir niveles de colesterol y previene infecciones por hongos.
+      </div>
+    </details>
+
+    <details>
+      <summary>¿Con qué se come el kimchi?</summary>
+      <div class="faq__body">
+        ¡El kimchi es súper versátil! Se puede comer con cualquier cosa. Lo más común
+        es comerlo con arroz o fideos y queda buenísimo sobre tostadas o dentro de un
+        wrap. ¡Nosotros lo comemos a tenedorazos!
+      </div>
+    </details>
+
+    <details>
+      <summary>¿Konchi Kimchi es apto celíaco?</summary>
+      <div class="faq__body">
+        Sí, nuestro kimchi no contiene TACC.
+      </div>
+    </details>
+
+    <details>
+      <summary>¿Es apto para diabéticos?</summary>
+      <div class="faq__body">
+        Existen estudios que indican que el kimchi no es solo apto para la diabetes
+        sino que mejora la sensibilidad al azúcar en sangre y a la insulina. De todas
+        maneras, sugerimos consultar con su médico ya que nuestro kimchi contiene
+        niveles bajos de glucosa.
+      </div>
+    </details>
+  </div>
 </template>
 
 <template id="tpl-contact">
-  <h3>Contactos</h3>
-  <p>DDDSDSDSDSDSDSD</p>
-</template>
+  <h3>Contacto</h3>
 
+  <div class="panel-grid">
+    <div class="panel-card">
+      <p class="panel-card__title">WhatsApp</p>
+      <p class="panel-card__text">
+        <a class="contact-value" href="#" target="_blank" rel="noopener">
+          +54 11 XXXX-XXXX
+        </a>
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Teléfono</p>
+      <p class="panel-card__text">
+        <a class="contact-value" href="tel:+5411XXXXXXXX">
+          +54 11 XXXX-XXXX
+        </a>
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Email</p>
+      <p class="panel-card__text">
+        <a class="contact-value" href="mailto:tuemail@dominio.com">
+          tuemail@dominio.com
+        </a>
+      </p>
+    </div>
+
+    <div class="panel-card">
+      <p class="panel-card__title">Ubicación</p>
+      <p class="panel-card__text">Saavedra, CABA</p>
+    </div>
+  </div>
+
+  <div class="panel-card" style="margin-top:12px">
+    <p class="panel-card__title">Horarios</p>
+
+    <ul class="hours">
+      <li><span class="hours__day">Lunes</span><span class="hours__time">9:00 – 20:00</span></li>
+      <li><span class="hours__day">Martes</span><span class="hours__time">9:00 – 20:00</span></li>
+      <li><span class="hours__day">Miércoles</span><span class="hours__time">9:00 – 20:00</span></li>
+      <li><span class="hours__day">Jueves</span><span class="hours__time">9:00 – 20:00</span></li>
+      <li><span class="hours__day">Viernes</span><span class="hours__time">9:00 – 20:00</span></li>
+      <li><span class="hours__day">Sábado</span><span class="hours__time">—</span></li>
+      <li><span class="hours__day">Domingo</span><span class="hours__time">—</span></li>
+    </ul>
+  </div>
+
+  <div class="panel-card" style="margin-top:12px">
+    <p class="panel-card__title">Días de entrega</p>
+    <p class="panel-card__text">Martes y Viernes</p>
+  </div>
+
+  <div class="panel-card" style="margin-top:12px">
+  <p class="panel-card__title">Redes</p>
+
+  <div class="contact-social" aria-label="Redes sociales">
+    <a class="social__btn" href="#" target="_blank" rel="noopener" aria-label="WhatsApp">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M20.52 3.48A11.9 11.9 0 0 0 12.06 0C5.5 0 .16 5.34.16 11.9c0 2.1.55 4.15 1.6 5.97L0 24l6.28-1.65a11.86 11.86 0 0 0 5.78 1.47h.01c6.56 0 11.9-5.34 11.9-11.9 0-3.18-1.24-6.17-3.45-8.44Zm-8.46 18.3h-.01a9.9 9.9 0 0 1-5.04-1.38l-.36-.21-3.72.98.99-3.63-.24-.37a9.9 9.9 0 1 1 8.38 4.61Zm5.76-7.86c-.31-.16-1.84-.9-2.12-1-.28-.1-.49-.16-.7.16-.2.31-.8 1-.98 1.21-.18.21-.36.23-.67.08-.31-.16-1.3-.48-2.48-1.54-.92-.82-1.54-1.84-1.72-2.15-.18-.31-.02-.48.14-.64.14-.14.31-.36.47-.54.16-.18.21-.31.31-.52.1-.21.05-.39-.03-.54-.08-.16-.7-1.68-.96-2.3-.25-.6-.5-.52-.7-.52h-.6c-.2 0-.52.08-.8.39-.28.31-1.05 1.03-1.05 2.52s1.08 2.93 1.23 3.13c.16.21 2.12 3.24 5.15 4.54.72.31 1.28.5 1.72.64.72.23 1.38.2 1.9.12.58-.09 1.84-.75 2.1-1.47.26-.72.26-1.34.18-1.47-.08-.13-.28-.21-.6-.36Z"/>
+      </svg>
+    </a>
+
+    <a class="social__btn" href="#" target="_blank" rel="noopener" aria-label="Instagram">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm6.2-2.3a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2Z"/>
+      </svg>
+    </a>
+
+    <a class="social__btn" href="#" target="_blank" rel="noopener" aria-label="Facebook">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.3-1.6 1.7-1.6h1.5V4.7c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.3V11H7.5v3H10v8h3.5Z"/>
+      </svg>
+    </a>
+  </div>
+</div>
+</template>
 
     <div class="side-panel__body" id="sidePanelBody"></div>
   </div>
 </aside>
-
-
   <script src="productos.js"></script>
   <script src="app.js"></script>
 </body>
