--- a/checkout.html
+++ b/checkout.html
@@ -54,7 +54,7 @@
 
               <label class="field">
                 <span>Nombre y apellido</span>
-                <input id="custName" type="text" placeholder="Ej: Juan Pérez" />
+                <input id="custName" type="text" placeholder="" />
               </label>
 
               <label class="field">
@@ -82,7 +82,7 @@
                 <textarea
                   id="custNotes"
                   rows="3"
-                  placeholder="Ej: sin picante / entregar en portería..."
+                  placeholder=""
                 ></textarea>
               </label>
             </div>
