--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
         <img class="brand__img" src="img/logotransparente.png" alt="Konchi" />
       </a>
 
+    <div class="header__actions">
+      <button class="icon-btn icon-btn--square search-btn" id="searchBtn" aria-label="Buscar">
+        <span class="search-ico" aria-hidden="true">
+          <svg viewBox="0 0 611.997 611.998">
+            <path d="M601.444,535.668L433.671,368.273c1.504-2.26,2.639-6.032,3.765-10.931c17.719-29.784,28.682-62.206,32.052-96.518c0.772-7.915,1.126-16.215,1.126-24.129c0-26.012-4.343-52.088-13.19-77.666c-11.51-33.243-30.098-62.648-55.426-88.226c-90.422-91.306-242.656-91.097-332.909,0c-30.018,30.307-50.391,65.633-61.08,105.945c-10.802,40.755-10.553,80.682,0,121.026c10.561,40.344,30.652,75.67,61.08,105.944c45.355,45.131,104.811,68.617,166.269,68.617c47.125,0,89.964-13.625,129.688-38.455l6.033-3.772L539.608,598.26c6.418,6.403,13.199,10.184,19.609,10.932c1.504,0.378,2.638,0.45,3.764,0.378c4.537-0.298,8.695-1.464,12.065-3.395c4.552-2.598,9.427-6.41,14.711-11.687l7.536-7.545c5.276-5.276,9.089-10.158,11.688-14.703c1.93-3.37,3.016-7.914,3.016-13.577v-3.016C611.997,549.238,608.048,542.264,601.444,535.668z M422.354,287.214c-8.848,33.129-25.634,62.206-50.52,87.091c-36.194,36.194-84.832,56.552-136.478,56.552c-50.897,0-99.221-20.687-136.863-56.552c-73.957-70.458-73.651-202.189,0-273.34c37.2-35.929,85.588-56.93,136.863-56.93c53.914,0,98.892,19.111,136.478,56.93c24.62,24.773,41.849,53.536,50.52,86.714C431.024,220.857,431.226,253.988,422.354,287.214z"></path>
+          </svg>
+        </span>
+      </button>
+
       <button class="icon-btn icon-btn--square cart-btn" id="cartBtn" aria-label="Abrir carrito">
         <span class="cart-ico" aria-hidden="true">
-  <?xml version="1.0" encoding="utf-8"?>
-<svg width="800px" height="800px" viewBox="0 0 1024 1024" fill="#000000" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M800.8 952c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56z m-448 0c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56zM344 792c-42.4 0-79.2-33.6-84-76l-54.4-382.4-31.2-178.4c-2.4-19.2-19.2-35.2-37.6-35.2H96c-13.6 0-24-10.4-24-24s10.4-24 24-24h40.8c42.4 0 80 33.6 85.6 76l31.2 178.4 54.4 383.2C309.6 728 326.4 744 344 744h520c13.6 0 24 10.4 24 24s-10.4 24-24 24H344z m40-128c-12.8 0-23.2-9.6-24-22.4-0.8-6.4 1.6-12.8 5.6-17.6s10.4-8 16-8l434.4-32c19.2 0 36-15.2 38.4-33.6l50.4-288c1.6-13.6-2.4-28-10.4-36.8-5.6-6.4-12.8-9.6-21.6-9.6H320c-13.6 0-24-10.4-24-24s10.4-24 24-24h554.4c22.4 0 42.4 9.6 57.6 25.6 16.8 19.2 24.8 47.2 21.6 75.2l-50.4 288c-4.8 41.6-42.4 74.4-84 74.4l-432 32c-1.6 0.8-2.4 0.8-3.2 0.8z" fill="" /></svg>
-</span>
+          <?xml version="1.0" encoding="utf-8"?>
+          <svg width="800px" height="800px" viewBox="0 0 1024 1024" fill="#000000" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M800.8 952c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56z m-448 0c-31.2 0-56-24.8-56-56s24.8-56 56-56 56 24.8 56 56-25.6 56-56 56zM344 792c-42.4 0-79.2-33.6-84-76l-54.4-382.4-31.2-178.4c-2.4-19.2-19.2-35.2-37.6-35.2H96c-13.6 0-24-10.4-24-24s10.4-24 24-24h40.8c42.4 0 80 33.6 85.6 76l31.2 178.4 54.4 383.2C309.6 728 326.4 744 344 744h520c13.6 0 24 10.4 24 24s-10.4 24-24 24H344z m40-128c-12.8 0-23.2-9.6-24-22.4-0.8-6.4 1.6-12.8 5.6-17.6s10.4-8 16-8l434.4-32c19.2 0 36-15.2 38.4-33.6l50.4-288c1.6-13.6-2.4-28-10.4-36.8-5.6-6.4-12.8-9.6-21.6-9.6H320c-13.6 0-24-10.4-24-24s10.4-24 24-24h554.4c22.4 0 42.4 9.6 57.6 25.6 16.8 19.2 24.8 47.2 21.6 75.2l-50.4 288c-4.8 41.6-42.4 74.4-84 74.4l-432 32c-1.6 0.8-2.4 0.8-3.2 0.8z" fill="" /></svg>
+        </span>
         <span class="cart-badge" id="cartCount">0</span>
       </button>
     </div>
@@ -31,9 +40,18 @@
 <nav class="drawer" id="drawer" aria-hidden="true">
 
   <div class="drawer__header">
-    <span class="drawer__title">Menú</span>
-    <button class="drawer__close" id="drawerClose" type="button" aria-label="Cerrar menú">✕</button>
-  </div>
+  <!-- Search dentro del drawer (solo mobile) -->
+  <button class="drawerSearchBtn" id="drawerSearchBtn" type="button" aria-label="Buscar">
+    <span class="drawerSearchBtn__ico" aria-hidden="true">
+      <svg viewBox="0 0 24 24">
+        <path d="M10 4a6 6 0 1 1 3.6 10.8l4.3 4.3a1 1 0 0 1-1.4 1.4l-4.3-4.3A6 6 0 0 1 10 4zm0 2a4 4 0 1 0 .001 8.001A4 4 0 0 0 10 6z"></path>
+      </svg>
+    </span>
+    <span class="drawerSearchBtn__txt">Buscar productos...</span>
+  </button>
+
+</div>
+
 
   <div class="drawer__divider"></div>
 
@@ -70,15 +88,6 @@
 
 <div class="drawer__section">
   <div class="drawer__sectionTitle">— Información —</div>
-
-  <button class="drawer__link" type="button" data-panel="about">
-    <span class="drawer__icon" aria-hidden="true">
-      <svg viewBox="0 0 24 24">
-        <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5zm0 2c-5 0-9 2.5-9 5.5V22h18v-2.5C21 16.5 17 14 12 14z"></path>
-      </svg>
-    </span>
-    <span class="drawer__text">Nuestra Historia</span>
-  </button>
 
   <button class="drawer__link" type="button" data-panel="kimchis">
     <span class="drawer__icon" aria-hidden="true">
@@ -145,11 +154,31 @@
   </div>
 </section>
 
+<div class="searchModal" id="searchModal" aria-hidden="true">
+  <div class="searchModal__overlay" data-search-close></div>
 
+  <div class="searchModal__card" role="dialog" aria-modal="true" aria-label="Buscar productos">
+    <button class="searchModal__close" type="button" data-search-close aria-label="Cerrar">✕</button>
 
-  <div class="search search--big">
-    <input id="searchInput" type="search" placeholder="¿Qué estás buscando?" />
+    <div class="searchModal__content">
+      <div class="searchModal__field">
+        <span class="searchModal__icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24">
+            <path d="M10 4a6 6 0 1 1 3.6 10.8l4.3 4.3a1 1 0 0 1-1.4 1.4l-4.3-4.3A6 6 0 0 1 10 4zm0 2a4 4 0 1 0 .001 8.001A4 4 0 0 0 10 6z"></path>
+          </svg>
+        </span>
+
+        <input
+          id="searchInput"
+          class="searchModal__input"
+          type="search"
+          placeholder="Que deseas buscar?"
+          autocomplete="off"
+        />
+      </div>
+    </div>
   </div>
+</div>
 
   <section class="section" id="catalogo">
     <div class="container">
@@ -157,6 +186,9 @@
 
       <div class="cats" id="cats"></div>
 
+<br>
+<br>
+<br>
 <div class="subhead" id="mas-vendidos">
   <div class="subhead__title">Más vendidos</div>
 </div>
@@ -168,10 +200,10 @@
     <div class="best-empty__text">Acá van a aparecer los productos más vendidos.</div>
   </div>
 </div>
-
+<br>
 <section class="about" id="info">
   <h3 class="about__title">¿QUIÉNES SOMOS?</h3>
-
+  <br>
   <div class="about__card">
   <p class="about__text">
     Somos una familia que lleva 23 años explorando sabores en el mundo de la gastronomía.
@@ -194,11 +226,6 @@
     <li><strong>Presentaciones que invitan</strong> a jugar, probar y compartir.</li>
     <li><strong>Atención cercana</strong>, porque cada frasco lleva nuestra historia… y queremos conocer la tuya.</li>
   </ul>
-
-  <p class="about__cta">
-    💌 <strong>Sumate a nuestra comunidad fermentada.</strong><br>
-    Recibí recetas, promos exclusivas y tips para que el kimchi sea parte de tu día a día.
-  </p>
 </div>
 </section>
 
@@ -218,7 +245,6 @@
   <a href="#catalogo">Productos</a>
   <a href="#mas-vendidos">Más vendidos</a>
 
-  <button type="button" class="footer__link" data-panel="about">Nuestra Historia</button>
   <button type="button" class="footer__link" data-panel="kimchis">Sobre nuestros Kimchis</button>
   <button type="button" class="footer__link" data-panel="faq">Preguntas frecuentes</button>
   <button type="button" class="footer__link" data-panel="contact">Contactos</button>
