--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kimchi</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link href="styles.css?v=7" rel="stylesheet"/>
 </head>
 <body>
 
