--- a/categoria.html
+++ b/categoria.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Konchi - Categoría</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link href="styles.css?v=8" rel="stylesheet"/>
 </head>
 <body class="page-category">
 
@@ -74,8 +74,8 @@
   </div>
 </div>
 
-<script src="productos.js"></script>
-<script src="app.js"></script>
-<script src="categoria.js"></script>
+<script src="productos.js?v=8"></script>
+<script src="app.js?v=8"></script>
+<script src="categoria.js?v=8"></script>
 </body>
 </html>
