--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Konchi - Checkout</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link href="styles.css?v=8" rel="stylesheet"/>
 </head>
 <body class="page-checkout">
 
@@ -97,7 +97,7 @@
   </div>
 </section>
 
-<script src="productos.js"></script>
-<script src="checkout.js"></script>
+<script src="productos.js?v=8"></script>
+<script src="app.js?v=8"></script>
 </body>
 </html>
