--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kimchi</title>
-  <link href="styles.css?v=7" rel="stylesheet"/>
+  <link href="styles.css?v=8" rel="stylesheet"/>
 </head>
 <body>
 
@@ -570,7 +570,7 @@
     <div class="side-panel__body" id="sidePanelBody"></div>
   </div>
 </aside>
-  <script src="productos.js"></script>
-  <script src="app.js"></script>
+  <script src="productos.js?v=8"></script>
+  <script src="app.js?v=8"></script>
 </body>
 </html>
