--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kimchi</title>
-  <link href="styles.css?v=9" rel="stylesheet"/>
+  <link href="styles.css?v=10" rel="stylesheet"/>
 </head>
 <body>
 
@@ -595,6 +595,6 @@
   </div>
 </aside>
   <script src="productos.js?v=9"></script>
-  <script src="app.js?v=9"></script>
+  <script src="app.js?v10"></script>
 </body>
 </html>
