--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Konchi - Checkout</title>
-  <link href="styles.css?v=11" rel="stylesheet" />
+  <link href="styles.css?v=13" rel="stylesheet" />
 </head>
 
 <body class="page-checkout">
@@ -17,7 +17,7 @@
         </button>
 
         <a class="brand brand--center" href="index.html" aria-label="Inicio">
-          <img class="brand__img" src="img/logotransparente.png" alt="Konchi" />
+          <img class="brand__img" src="img/logo/logotransparente.png" alt="Konchi" />
         </a>
 
         <div class="header__spacer" aria-hidden="true"></div>
@@ -180,8 +180,8 @@
     </div>
   </div>
 
-  <script src="productos.js?v=11"></script>
-  <script src="checkout.js?v=11"></script>
+  <script src="productos.js?v=13"></script>
+  <script src="checkout.js?v=13"></script>
 </body>
 
 </html>
